--- a/meshiterro/app/views/post_images/index.html.erb
+++ b/meshiterro/app/views/post_images/index.html.erb
@@ -31,7 +31,7 @@
                     <%= post_image.user.name %>
                   </li>
                   <li>
-                    <a href="#">23 コメント</a>
+                    <%= link_to "#{post_image.post_comments.count}コメント", post_image_path(post_image.id) %>
                   </li>
                 </ul>
               </div>
@@ -42,4 +42,6 @@
       </div>
     </div>
   </div>
-</section> 
+</section>
+
+<%= paginate @post_images, class: "paginate" %>
